2006-10-30  Brian Bidulock  <bidulock@openss7.org>

	* tests/local.at: added ability to sync between test cases
	* tests/testsuite-inet_raw.at: added ability to sync between test cases
	* tests/testsuite-inet_raw2.at: added ability to sync between test cases
	* tests/testsuite-inet_sctp.at: added ability to sync between test cases
	* tests/testsuite-inet_tcp.at: added ability to sync between test cases
	* tests/testsuite-inet_udp.at: added ability to sync between test cases
	* tests/testsuite-inet_udp2.at: added ability to sync between test cases

2006-10-27  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: change linux/config.h to autoconf.h for 2.6.18

2006-10-21  Brian Bidulock  <bidulock@openss7.org>

	* strinet.lsm.in: updated streams release number
	* debian/control.in: updated streams release number
	* doc/man/strinet.refs: updated streams release number
	* doc/manual/releases.texi: updated streams release number
	* doc/man/strisdn.refs: updated streams release number
	* debian/control.in: updated LiS release number
	* doc/manual/releases.texi: updated LiS release number

2006-10-19  Brian Bidulock  <bidulock@openss7.org>

	* src/include/sys/xti_sctp.h: added ETSI SACK frequency option

2006-10-12  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: removed redundant debug flags
	* src/drivers/rawip.c: removed redundant debug flags
	* src/drivers/udp.c": removed redundant debug flags

2006-10-10  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* THANKS: updates for release
	* doc/man/strinet.refs: updates for release
	* doc/man/man3/xti_ip.3.man: updates for release
	* doc/man/man3/xti_sctp.3.man: updates for release
	* doc/man/man3/xti_tcp.3.man: updates for release
	* doc/man/man3/xti_udp.3.man: updates for release
	* doc/man/man4/INET.4.man: updates for release
	* doc/man/man4/arp.4.man: updates for release
	* doc/man/man4/egp.4.man: updates for release