@@ -1,3 +1,9 @@
+2006-12-08  Brian Bidulock  <bidulock@openss7.org>
+
+	* src/drivers/rawip.c: changes to bufq locking
+	* src/drivers/udp.c: changes to bufq locking
+	* src/util/init/strinet.sh: name correction for debian init script
+
 2006-10-30  Brian Bidulock  <bidulock@openss7.org>
 
 	* tests/local.at: added ability to sync between test cases
